# canvas_decon

./: .gitignore  CLAUDE.md  CONTEXT_FOR_CLAUDE.md  GEMINI.md  GUI_REFACTOR_PLAN.md  README.md  REFACTOR_SUMMARY.md  ask_with_pdf.py  canvas_decon.spec  checkStatus.py  claude_full.md  clean.py  clean_whitelist.txt  config.py  context.txt  gCO.py  getAPI.py  getAss.py  getCookie.py  getCourses.py  getHTML.py  getHomework.py  getQuiz.py  getSyll.py  getTotp.py  html2md.py  learn_preferences.json  main.py  old_main.py  pyproject.toml  rename_plan.txt  requirements.txt  sel_test.py  solution.txt  stQz.py  test_api.py  test_structure.py  todos.json
.claude/: settings.local.json
core/: __init__.py  canvas_api.py  exceptions.py  log.py  security.py
func/: __init__.py  ai.py  clean.py  getCourses.py  getHistoryTodos.py  getHomework.py  getQuizStatus.py  getQuiz_ultra.py  getSyll.py  getTodoDebug.py  getTodos.py  history_manager.py  learn_material.py  logCookie.py  logTotp.py  mgrHistory.py  model_selector.py  procLearnMaterial.py  upPromptFiles.py  utilModelSelector.py  utilModels.py  utilPdfBookmark.py  utilPdfSplitter.py  utilProgress.py  utilPromptFiles.py
gui/: app.py  auto_detail_manager.py  auto_view.py  cfgLearnPrefs.py  cfgModel.py  course_detail_manager.py  course_view.py  data_manager.py  delegates.py  detail_view.py  formatters.py  init.py  ios_toggle.py  learn.py  learn_preferences.py  learn_sitting_renderer.py  main_view.py  mgrData.py  mgrTask.py  model_config.py  processors.py  qt.py  qt_interact.py  rdrLearnSitting.py  settings_view.py  styles.py  widgets.py  (+3 more)
(+85 files in other folders)
